# iot-dash

./: .gitignore  Cargo.toml  README.md  create_pod.sh  docker-compose.yaml  kube.yaml
common/: Cargo.toml  README.md
common/src/: lib.rs
configs/db/: 20230707180231_setup.sql
db-api/: .env  Cargo.toml  Dockerfile  README.md
db-api/src/: endpoints.rs  main.rs
db-api/src/fixtures/: readings.sql  sensors.sql
ingest/: .env  Cargo.toml  Dockerfile  README.md  config.yaml
ingest/migrations/: 20230707180231_setup.sql
ingest/src/: actors.rs  connection.rs  main.rs
inlet/: Cargo.toml  Dockerfile  README.md  sensors.yaml
inlet/src/: main.rs
src/: main.py
