[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
serde = { version = "1.0.171", features = ["derive"] }
serde_with = { version = "3.0.0", features = ["chrono"] }
sqlx = { version = "0.7.1", features = ["chrono", "postgres"] }

[dev-dependencies]
serde_json = "1.0.102"
