[package]
name = "db-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = "0.4.26"
dotenvy = "0.15.7"
serde = { version = "1.0.171", features = ["derive"] }
serde_with = "3.0.0"
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
common = { path = "../common" }
tracing-appender = "0.2.2"


[dev-dependencies]
tower = "0.4.13"
hyper = "0.14.27"
serde_json = "1.0.103"
mime = "0.3.17"
