[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
colored = "2.0.4"
rumqttc = "0.22.0"
serde = { version = "1.0.166", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
