[package]
name = "inlet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
colored = "2.0.4"
rand = "0.8.5"
rumqttc = "0.22.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_yaml = "0.9.22"
tokio = { version = "1.28.2", features = ["full"] }
